# osync

./: .gitignore  Cargo.toml  LICENSE.md  README.md  go.mod  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  ftpsync.yml
ftpsync/: __main__.py  ftp.py  ftpsync.py  index.py
internal/index/: index.go  index_test.go
snap/: snapcraft.yaml
src/: index.rs  lib.rs  sync.rs
tests/: test_ftpsync.py  test_index.py
