[package]
name = "osync"
version = "1.5.0"
authors = ["Aloïs Micard <alois@micard.lu>"]
edition = "2018"
description = "Tool to synchronize in a optimized way a LOT of files to a FTP server"
license = "GPL-3.0"
repository = "https://github.com/creekorful/osync"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.10.0"
ftp = "3.0.1"
clap = "3.0.0"
walkdir = "2.3.2"
url = "2.2.2"
indicatif = "0.16.2"

[dev-dependencies]
tempdir = "0.3.7"
